<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.voidream.vmenu.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/toolbar"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/voidream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/back_end_programmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_menu"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/ryvaldie_ishaq_hamdallah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/client_amp_server_programmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_menu"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/dwitya_bayusagara_arymurti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/designer_amp_front_end_programmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_menu"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/abi_karami_wijaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/marketing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_menu"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/lili_ramli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/thanks_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_menu"
                android:textSize="@dimen/static_subheading"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:layout_marginRight="@dimen/right_side_icon"
                android:layout_marginLeft="@dimen/right_side_icon"
                android:text="@string/allah_swt_newtronic_solution_github_lenovo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_between_content"
                android:textSize="@dimen/static_body"
                android:layout_marginBottom="@dimen/toolbar"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
