<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sukses_memesan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.voidream.vmenu.SuksesMemesan">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider1"
        android:src="@color/black22"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/kembali"/>

    <Button
        android:text="@string/kembali"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_menu"
        android:textSize="@dimen/static_button"
        style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:id="@+id/kembali"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_transparent"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:text="@string/pesanan_atas_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/static_body"
                android:textColor="@color/black54"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:text="Cinta"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nama_pemesan"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/static_subheading"
                android:textColor="@color/colorPrimary"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_marginTop="@dimen/space_between_content" />
            <TextView
                android:text="Table: 12"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meja"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/static_caption"
                android:textColor="@color/colorPrimary"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
            <TextView
                android:text="@string/telah_terkirim_nsilahkan_menunggu_pesanan_datang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/static_body"
                android:textColor="@color/black54"
                android:layout_marginTop="@dimen/space_between_content"
                style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
